hphp/hack/test/typecheck/lambda/variadics/arities02.php.legacy.exp
File "arities02.php", line 23, characters 11-23:
Typing error (Typing[4110])
File "arities02.php", line 23, characters 11-15:
This is a num (int | float) because this is used in an arithmetic operation
File "arities02.php", line 3, characters 35-40:
It is incompatible with a string
File "arities02.php", line 23, characters 11-23:
Typing error (Typing[4110])
File "arities02.php", line 23, characters 19-23:
This is a num (int | float) because this is used in an arithmetic operation
File "arities02.php", line 3, characters 35-40:
It is incompatible with a string
File "arities02.php", line 34, characters 17-19:
You are trying to access the member bar but this is not an object, it is an int (Typing[4062])
File "arities02.php", line 3, characters 51-53:
Definition is here
File "arities02.php", line 34, characters 17-19:
You are trying to access the member bar but this is not an object, it is a string (Typing[4062])
File "arities02.php", line 3, characters 35-40:
Definition is here
File "arities02.php", line 34, characters 17-19:
You are trying to access the member bar but this is not an object, it is a string (Typing[4062])
File "arities02.php", line 3, characters 43-48:
Definition is here
File "arities02.php", line 40, characters 17-19:
You are trying to access the member bar but this is not an object, it is a string (Typing[4062])
File "arities02.php", line 39, characters 29-30:
Definition is here
File "arities02.php", line 45, characters 13-48:
Invalid argument (Typing[4042])
File "arities02.php", line 45, characters 13-48:
Should have a variadic argument
File "arities02.php", line 3, characters 20-63:
Because of this definition
File "arities02.php", line 50, characters 13-52:
Invalid argument (Typing[4041])
File "arities02.php", line 50, characters 13-52:
Too many mandatory arguments
File "arities02.php", line 3, characters 20-63:
Because of this definition
